<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="1027dp"
        android:layout_height="640dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/system_info"
                android:textColor="@color/white"
                android:textSize="33sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/setting_dialog_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:orientation="vertical" >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_model"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CPU"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GPU"
                    android:textSize="22sp" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_configuration"
                    android:textSize="22sp" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Internet"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Memory"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Space"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Android_Version"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deviceid"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/devicemodel"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dnum"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/didtoken"
                    android:textSize="22sp" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/huanid"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Software_Version"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project_info_id"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Build_Time"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Serial_Number"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="170dp"
                android:gravity="center_horizontal"
                android:orientation="vertical" >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_model_val"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CPU_val"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GPU_val"
                    android:textSize="22sp" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_configuration_val"
                    android:textSize="22sp" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Internet_val"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Memory_val"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Space_val"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Android_Version_val"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tv_deviceid_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Software_Version_val"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tv_devicemodel_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Software_Version_val"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tv_dnum_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Software_Version_val"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tv_didtoken_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Software_Version_val"
                    android:textSize="22sp" />
                
                <TextView
                    android:id="@+id/tv_huanid_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Software_Version_val"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tv_software_version_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Software_Version_val"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tv_project_info_id_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Software_Version_val"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tv_build_time_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Build_Time_val"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tv_serial_number_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Serial_Number_val"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>