<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_bg"
     android:gravity="center"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="1027dp"
        android:layout_height="640dp"
       android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/setting_info"
            android:textColor="@color/white"
            android:textSize="33sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/setting_dialog_bg"
        android:orientation="vertical" >
           
         <LinearLayout
            android:id="@+id/system_info_ll"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="@drawable/linearlayout_background"
            android:focusable="true"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical" >       
        <TextView
            android:id="@+id/system_info_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:paddingLeft="60dp"
            android:text="@string/system_info"
            android:textColor="@color/white"
            android:textSize="22sp" />
             <TextView
                android:id="@+id/system_info_txt_instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="60dp"
                android:singleLine="true"
                android:text="@string/system_info_help"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />  
     </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line" />          
         <LinearLayout
            android:id="@+id/legal_informatics_ll"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="@drawable/linearlayout_background"
            android:focusable="true"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical" >       
        <TextView
            android:id="@+id/legal_informatics_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:paddingLeft="60dp"
            android:text="@string/legal_informatics"
            android:textColor="@color/white"
            android:textSize="22sp" />
            <TextView
                android:id="@+id/legal_informatics_txt_instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="60dp"
                android:singleLine="true"
                android:text="@string/legal_informatics_help"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />
         </LinearLayout>   
              <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line" />            
    </LinearLayout>
    </LinearLayout>
</LinearLayout>