<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_bg"
     android:gravity="center"
    android:orientation="vertical" >

    <!-- android:background="@drawable/setting_bg2" -->
       <LinearLayout
        android:layout_width="1027dp"
        android:layout_height="640dp"
       android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/system"
            android:textColor="@color/white"
            android:textSize="33sp" />
    </LinearLayout>
    <!-- android:background="@drawable/setting_bg10" -->

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/setting_dialog_bg"        
        android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/update_local_ll"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="@drawable/linearlayout_background"
            android:focusable="true"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical" >
        <TextView
            android:id="@+id/update_local_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:paddingLeft="60dp"
            android:text="@string/system_update_local"
            android:textColor="@color/white"
            android:textSize="22sp" />
            <TextView
                android:id="@+id/update_local_txt_instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="60dp"
                android:singleLine="true"
                android:text="@string/system_update_local"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line" />
        </LinearLayout>
         <LinearLayout
            android:id="@+id/update_net_ll"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="@drawable/linearlayout_background"
            android:focusable="true"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical" >       
        <TextView
            android:id="@+id/update_net_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:paddingLeft="60dp"
            android:text="@string/system_update_net"
            android:textColor="@color/white"
            android:textSize="22sp" />
                    <TextView
                android:id="@+id/update_net_txt_instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="60dp"
                android:singleLine="true"
                android:text="@string/system_update_net"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>